(ffs amend pt 4)

--- a/scss/dialog/_dialogs.scss
+++ b/scss/dialog/_dialogs.scss
@@ -197,12 +197,12 @@
             filter: brightness(1.5) drop-shadow(0 0 4px black);
           }
           .roll-consequence-type-select {
-            font-family: Oswald, sans-serif;
+            font-family: Oswald, serif;
             flex-basis: 150px;
 
           }
           .roll-consequence-attribute-select {
-            font-family: Oswald, sans-serif;
+            font-family: Oswald, serif;
             flex-basis: 95px;
           }
           .consequence-name {
